# synchronous-autocomplete-rs

./: .travis.yml  Cargo.toml  readme.md
benches/: main.rs
src/: lib.rs
