[package]
name = "synchronous_autocomplete"
version = "0.1.0"
authors = ["Jannis R <mail@jannisr.de>"]
repository = "https://github.com/derhuerst/synchronous-autocomplete-rs.git"
homepage = "https://github.com/derhuerst/synchronous-autocomplete-rs"
license = "ISC"
readme = "README.md"
description = "Simple, synchronous autocompletion."
keywords = ["autocomplete, autocompletion, search"]
exclude = [".travis.yml"]

[dependencies]
slugify = "0.1.0"
levenshtein = "1.0.3"
float-ord = "0.2.0"

[dev-dependencies]
easybench = "0.1.3"

[[bench]]
name = "main"
harness = false

[badges]
travis-ci = { repository = "derhuerst/synchronous-autocomplete-rs" }
